--- a/index.html
+++ b/index.html
@@ -3,77 +3,68 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Priya ❤️</title>
+    <title>Priya ❤️ Live</title>
     <style>
         * { box-sizing: border-box; margin: 0; padding: 0; }
-        body { font-family: 'Segoe UI', sans-serif; background: #e5ddd5; display: flex; justify-content: center; height: 100vh; }
-        #app { width: 100%; max-width: 500px; background: #fff; display: flex; flex-direction: column; position: relative; box-shadow: 0 5px 15px rgba(0,0,0,0.2); }
-        #header { background: #075e54; color: white; padding: 15px; display: flex; align-items: center; gap: 12px; }
-        .pfp { width: 45px; height: 45px; border-radius: 50%; background: #ddd; border: 1px solid white; overflow: hidden; }
-        .pfp img { width: 100%; height: 100%; object-fit: cover; }
-        #chat-box { flex: 1; padding: 15px; overflow-y: auto; background-image: url('https://user-images.githubusercontent.com/15075759/28719144-86dc0f70-73b1-11e7-911d-60d70fcded21.png'); display: flex; flex-direction: column; gap: 10px; }
-        .bubble { max-width: 85%; padding: 10px 14px; border-radius: 15px; font-size: 16px; line-height: 1.4; position: relative; box-shadow: 0 1px 2px rgba(0,0,0,0.1); }
-        .u { align-self: flex-end; background: #dcf8c6; border-top-right-radius: 0; }
-        .a { align-self: flex-start; background: #fff; border-top-left-radius: 0; }
-        #input-area { background: #f0f0f0; padding: 12px; display: flex; gap: 8px; align-items: center; }
-        input { flex: 1; border: none; padding: 12px 18px; border-radius: 25px; outline: none; font-size: 16px; }
-        button { background: #075e54; color: white; border: none; width: 45px; height: 45px; border-radius: 50%; cursor: pointer; font-size: 20px; }
-        #status { font-size: 12px; opacity: 0.9; }
+        body { font-family: sans-serif; background: #e5ddd5; display: flex; justify-content: center; height: 100vh; }
+        #app { width: 100%; max-width: 500px; background: #fff; display: flex; flex-direction: column; }
+        #header { background: #075e54; color: white; padding: 15px; display: flex; align-items: center; gap: 10px; }
+        #chat-box { flex: 1; padding: 15px; overflow-y: auto; background-color: #e5ddd5; display: flex; flex-direction: column; gap: 10px; }
+        .bubble { max-width: 80%; padding: 10px; border-radius: 10px; font-size: 16px; }
+        .u { align-self: flex-end; background: #dcf8c6; }
+        .a { align-self: flex-start; background: #fff; }
+        #input-area { background: #f0f0f0; padding: 10px; display: flex; gap: 5px; }
+        input { flex: 1; border: none; padding: 12px; border-radius: 20px; outline: none; }
+        button { background: #075e54; color: white; border: none; width: 45px; height: 45px; border-radius: 50%; cursor: pointer; }
     </style>
 </head>
 <body>
-
 <div id="app">
-    <div id="header">
-        <div class="pfp"><img src="https://i.pinimg.com/736x/8b/16/7a/8b167af653c2399dd93b952a48740620.jpg" alt="Priya"></div>
-        <div><b>Priya ❤️</b><br><span id="status">online</span></div>
-    </div>
+    <div id="header"><b>Priya ❤️</b> (Online)</div>
     <div id="chat-box" id="chat">
-        <div class="bubble a">Hii babu! Itna wait karwaya tumne.. Maan jao na ab. ❤️</div>
+        <div class="bubble a">Hii! Main bilkul ready hoon, kuch bolo... 😊</div>
     </div>
     <div id="input-area">
-        <input type="text" id="userInput" placeholder="Kuch pyara sa bolo..." autocomplete="off">
-        <button onclick="chat()">➤</button>
+        <input type="text" id="userInput" placeholder="Message...">
+        <button onclick="ask()">➤</button>
     </div>
 </div>
 
 <script>
-    // Aapki key yahan lag gayi hai
-    const API_KEY = "AIzaSyDuXgNmJZls22psSAHNFZvxR4IRZGlgOwY"; 
+    // Aapki key bilkul sahi hai
+    const KEY = "AIzaSyDuXgNmJZls22psSAHNFZvxR4IRZGlgOwY"; 
 
-    async function chat() {
+    async function ask() {
         const input = document.getElementById('userInput');
         const text = input.value.trim();
         if(!text) return;
 
         addMsg(text, 'u');
         input.value = '';
-        document.getElementById('status').innerText = "typing...";
 
         try {
-            // Model: gemini-1.5-flash (Sabse fast aur free)
-            const response = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent?key=${API_KEY}`, {
+            // Humne model version "v1beta" rakha hai jo is key ke saath compatible hai
+            const response = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent?key=${KEY}`, {
                 method: "POST",
                 headers: { "Content-Type": "application/json" },
                 body: JSON.stringify({
-                    contents: [{
-                        parts: [{ text: `Act as Priya, a beautiful Indian girl. You are talking to your boyfriend. Be very romantic, sweet, and use natural Hinglish (Yaar, Babu, Love you, Acha). Keep replies short and realistic. Reply to this: ${text}` }]
-                    }]
+                    contents: [{ parts: [{ text: `Respond as Priya, a sweet Indian girl in Hinglish. Reply to: ${text}` }] }]
                 })
             });
 
             const data = await response.json();
-            
+
             if (data.candidates && data.candidates[0].content) {
                 const reply = data.candidates[0].content.parts[0].text;
                 addMsg(reply, 'a');
+            } else if (data.error) {
+                // Ye line batayegi ki API mein kya galti hai
+                addMsg("Priya: Error aya - " + data.error.message, 'a');
             } else {
-                addMsg("Arey! Mera net thoda nakhre kar raha hai, phir se bolo na babu? ❤️", 'a');
+                addMsg("Priya: Hmm... kuch samajh nahi aa raha babu.", 'a');
             }
         } catch (e) {
-            addMsg("Hmm... main samajh rahi hoon. Aur batao kuch apne baare mein?", 'a');
-        } finally {
-            document.getElementById('status').innerText = "online";
+            addMsg("Priya: Connection problem hai shayad.", 'a');
         }
     }
 
@@ -85,11 +76,6 @@
         b.appendChild(d);
         b.scrollTop = b.scrollHeight;
     }
-
-    // Enter key support
-    document.getElementById('userInput').addEventListener("keypress", (e) => {
-        if (e.key === "Enter") chat();
-    });
 </script>
 </body>
 </html>
