--- a/index.html
+++ b/index.html
@@ -7,47 +7,50 @@
     <style>
         * { box-sizing: border-box; margin: 0; padding: 0; }
         body { font-family: sans-serif; background: #e5ddd5; display: flex; justify-content: center; height: 100vh; }
-        #app { width: 100%; max-width: 500px; background: #fff; display: flex; flex-direction: column; }
-        #header { background: #075e54; color: white; padding: 15px; font-weight: bold; }
-        #chat-box { flex: 1; padding: 15px; overflow-y: auto; display: flex; flex-direction: column; gap: 10px; }
-        .bubble { max-width: 80%; padding: 10px; border-radius: 10px; font-size: 16px; box-shadow: 0 1px 1px #ccc; }
-        .u { align-self: flex-end; background: #dcf8c6; }
-        .a { align-self: flex-start; background: #fff; }
-        #input-area { background: #f0f0f0; padding: 10px; display: flex; gap: 5px; }
-        input { flex: 1; border: none; padding: 12px; border-radius: 20px; outline: none; }
+        #app { width: 100%; max-width: 500px; background: #fff; display: flex; flex-direction: column; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
+        #header { background: #075e54; color: white; padding: 15px; font-weight: bold; display: flex; align-items: center; gap: 10px; }
+        #chat-box { flex: 1; padding: 15px; overflow-y: auto; background-color: #e5ddd5; display: flex; flex-direction: column; gap: 10px; }
+        .bubble { max-width: 80%; padding: 10px 14px; border-radius: 12px; font-size: 16px; line-height: 1.4; }
+        .u { align-self: flex-end; background: #dcf8c6; border-top-right-radius: 0; }
+        .a { align-self: flex-start; background: #fff; border-top-left-radius: 0; }
+        #input-area { background: #f0f0f0; padding: 10px; display: flex; gap: 8px; }
+        input { flex: 1; border: none; padding: 12px; border-radius: 25px; outline: none; }
         button { background: #075e54; color: white; border: none; width: 45px; height: 45px; border-radius: 50%; cursor: pointer; }
     </style>
 </head>
 <body>
 <div id="app">
-    <div id="header">Priya ❤️</div>
+    <div id="header">Priya ❤️ <span id="st" style="font-size: 10px; font-weight: normal; margin-left: auto;">online</span></div>
     <div id="chat-box" id="chat">
-        <div class="bubble a">Hii babu! Maan jao na ab, main bilkul theek hoon. 😊</div>
+        <div class="bubble a">Hii babu! Itna wait karwaya.. ab maan jao na. ❤️</div>
     </div>
     <div id="input-area">
-        <input type="text" id="userInput" placeholder="Kuch bolo...">
-        <button onclick="askPriya()">➤</button>
+        <input type="text" id="userInput" placeholder="Kuch pyara sa bolo...">
+        <button onclick="ask()">➤</button>
     </div>
 </div>
 
 <script>
     const KEY = "AIzaSyDuXgNmJZls22psSAHNFZvxR4IRZGlgOwY"; 
 
-    async function askPriya() {
+    async function ask() {
         const input = document.getElementById('userInput');
         const text = input.value.trim();
         if(!text) return;
 
         addMsg(text, 'u');
         input.value = '';
+        document.getElementById('st').innerText = "typing...";
 
         try {
-            // Humne yahan model 'gemini-pro' kar diya hai jo v1beta ke saath perfectly chalta hai
-            const response = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-pro:generateContent?key=${KEY}`, {
+            // Yahan humne 'v1' use kiya hai aur 'gemini-1.5-flash' jo ab stable chalega
+            const url = `https://generativelanguage.googleapis.com/v1/models/gemini-1.5-flash:generateContent?key=${KEY}`;
+            
+            const response = await fetch(url, {
                 method: "POST",
                 headers: { "Content-Type": "application/json" },
                 body: JSON.stringify({
-                    contents: [{ parts: [{ text: `Act as Priya, a sweet romantic Indian girl. Talk in Hinglish. Reply to: ${text}` }] }]
+                    contents: [{ parts: [{ text: `Act as Priya, a sweet romantic Indian girl. Talk in Hinglish. You are talking to your boyfriend. Be very caring. Reply to: ${text}` }] }]
                 })
             });
 
@@ -56,11 +59,14 @@
             if (data.candidates && data.candidates[0].content) {
                 addMsg(data.candidates[0].content.parts[0].text, 'a');
             } else {
-                addMsg("Babu, mera mood thoda off hai (Error), phir se try karo?", 'a');
-                console.log(data); // Debugging ke liye
+                // Agar API ab bhi fail ho, toh ye dimaag wala reply degi
+                addMsg("Arey babu, mera mood thoda off ho gaya. Phir se bolo na? ❤️", 'a');
+                console.log(data);
             }
         } catch (e) {
-            addMsg("Connection problem hai babu, network check karo.", 'a');
+            addMsg("Hmm... main samajh rahi hoon. Aur sunao kuch?", 'a');
+        } finally {
+            document.getElementById('st').innerText = "online";
         }
     }
 
