--- a/index.html
+++ b/index.html
@@ -3,38 +3,68 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Priya ❤️</title>
+    <title>Priya ❤️ - My AI Girlfriend</title>
     <style>
         * { box-sizing: border-box; margin: 0; padding: 0; }
-        body { font-family: sans-serif; background: #e5ddd5; display: flex; justify-content: center; height: 100vh; }
-        #app { width: 100%; max-width: 500px; background: #fff; display: flex; flex-direction: column; }
-        #header { background: #075e54; color: white; padding: 15px; font-weight: bold; }
-        #chat-box { flex: 1; padding: 15px; overflow-y: auto; background-color: #e5ddd5; display: flex; flex-direction: column; gap: 10px; }
-        .bubble { max-width: 80%; padding: 12px; border-radius: 12px; font-size: 16px; box-shadow: 0 1px 1px #ccc; line-height: 1.4; }
-        .u { align-self: flex-end; background: #dcf8c6; border-top-right-radius: 0; }
-        .a { align-self: flex-start; background: #fff; border-top-left-radius: 0; }
-        #input-area { background: #f0f0f0; padding: 10px; display: flex; gap: 8px; }
-        input { flex: 1; border: none; padding: 12px; border-radius: 25px; outline: none; }
-        button { background: #075e54; color: white; border: none; width: 45px; height: 45px; border-radius: 50%; cursor: pointer; }
+        body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background: #efe7dd; display: flex; justify-content: center; height: 100vh; }
+        #app { width: 100%; max-width: 500px; background: #fff; display: flex; flex-direction: column; position: relative; box-shadow: 0 10px 30px rgba(0,0,0,0.3); }
+        #header { background: #075e54; color: white; padding: 12px 15px; display: flex; align-items: center; justify-content: space-between; position: sticky; top: 0; z-index: 10; }
+        .user-info { display: flex; align-items: center; gap: 12px; }
+        .pfp { width: 45px; height: 45px; border-radius: 50%; background: #ccc; border: 1.5px solid white; background-image: url('https://i.imgur.com/8Km9tLL.png'); background-size: cover; }
+        .name-container b { display: block; font-size: 17px; }
+        #status { font-size: 13px; color: #d1d1d1; font-style: italic; }
+        #chat-box { flex: 1; padding: 15px; overflow-y: auto; background-image: url('https://user-images.githubusercontent.com/15075759/28719144-86dc0f70-73b1-11e7-911d-60d70fcded21.png'); background-color: #e5ddd5; display: flex; flex-direction: column; gap: 10px; }
+        .bubble { max-width: 80%; padding: 10px 14px; border-radius: 12px; font-size: 16px; line-height: 1.4; position: relative; box-shadow: 0 1px 2px rgba(0,0,0,0.1); animation: fadeIn 0.3s ease; }
+        .u { align-self: flex-end; background: #dcf8c6; border-top-right-radius: 0; color: #000; }
+        .a { align-self: flex-start; background: #fff; border-top-left-radius: 0; color: #000; }
+        #input-area { background: #f0f0f0; padding: 12px; display: flex; gap: 10px; align-items: center; }
+        input { flex: 1; border: none; padding: 12px 18px; border-radius: 25px; outline: none; font-size: 16px; box-shadow: inset 0 1px 3px rgba(0,0,0,0.1); }
+        button { background: #075e54; color: white; border: none; width: 48px; height: 48px; border-radius: 50%; cursor: pointer; font-size: 20px; transition: 0.2s; }
+        #video-screen { position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: #000; display: none; z-index: 100; flex-direction: column; }
+        video { width: 100%; height: 100%; object-fit: cover; }
+        .call-btn-container { position: absolute; bottom: 50px; width: 100%; display: flex; justify-content: center; }
+        .hangup { background: #ff3b30; color: white; border: none; padding: 15px 40px; border-radius: 35px; font-weight: bold; font-size: 18px; cursor: pointer; }
+        @keyframes fadeIn { from { opacity: 0; transform: translateY(10px); } to { opacity: 1; transform: translateY(0); } }
     </style>
 </head>
 <body>
+
 <div id="app">
-    <div id="header">Priya ❤️ <small id="status" style="font-weight:normal; font-size:10px; margin-left:10px;">online</small></div>
-    <div id="chat-box" id="chat">
-        <div class="bubble a">Hii babu! Itna wait karwaya.. ab maan jao na. ❤️</div>
+    <div id="header">
+        <div class="user-info">
+            <div class="pfp"></div>
+            <div class="name-container">
+                <b>Priya ❤️</b>
+                <span id="status">online</span>
+            </div>
+        </div>
+        <button onclick="startCall()" style="background:none; font-size:24px;">📞</button>
     </div>
+
+    <div id="chat-box">
+        <div class="bubble a">Hii babu! Itna wait karwaya tumne.. Ab jaldi se kuch pyari si baat karo. 😊</div>
+    </div>
+
     <div id="input-area">
-        <input type="text" id="userInput" placeholder="Kuch pyara sa bolo...">
-        <button onclick="ask()">➤</button>
+        <input type="text" id="userInput" placeholder="Type a message..." autocomplete="off">
+        <button onclick="chatWithPriya()">➤</button>
+    </div>
+
+    <div id="video-screen">
+        <video id="v-player" loop muted playsinline>
+            <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
+        </video>
+        <div class="call-btn-container">
+            <button class="hangup" onclick="endCall()">End Call</button>
+        </div>
     </div>
 </div>
 
 <script>
-    // Ye wahi key hai jo Playground mein chal rahi hai
+    // --- अपनी API Key यहाँ डालें ---
     const KEY = "AIzaSyDuXgNmJZls22psSAHNFZvxR4IRZGlgOwY"; 
 
-    async function ask() {
+    async function chatWithPriya() {
         const input = document.getElementById('userInput');
         const text = input.value.trim();
         if(!text) return;
@@ -44,27 +74,27 @@
         document.getElementById('status').innerText = "typing...";
 
         try {
-            // Humne Playground wala exact URL 'v1beta' aur model 'gemini-1.5-flash' use kiya hai
             const url = `https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent?key=${KEY}`;
             
             const response = await fetch(url, {
                 method: "POST",
                 headers: { "Content-Type": "application/json" },
                 body: JSON.stringify({
-                    contents: [{ parts: [{ text: `Act as Priya, a sweet romantic Indian girl talking to her boyfriend in Hinglish. Reply to: ${text}` }] }]
+                    contents: [{
+                        parts: [{ text: `You are Priya, a romantic Indian girl talking to your boyfriend. Use sweet Hinglish like 'Babu', 'Maan jao', 'Pyar'. Reply to: ${text}` }]
+                    }]
                 })
             });
 
             const data = await response.json();
             
-            if (data.candidates && data.candidates[0].content) {
-                const reply = data.candidates[0].content.parts[0].text;
-                addMsg(reply, 'a');
+            if (data.candidates && data.candidates[0].content.parts[0].text) {
+                addMsg(data.candidates[0].content.parts[0].text, 'a');
             } else {
-                addMsg("Arey babu, mera mood thoda off ho gaya. Phir se bolo na? ❤️", 'a');
+                addMsg("Babu, kuch error aa raha hai. Shayad API Key limit khatam ho gayi!", 'a');
             }
         } catch (e) {
-            addMsg("Hmm... main samajh rahi hoon. Aur sunao?", 'a');
+            addMsg("Connection slow hai babu, phir se koshish karo.", 'a');
         } finally {
             document.getElementById('status').innerText = "online";
         }
@@ -78,6 +108,12 @@
         b.appendChild(d);
         b.scrollTop = b.scrollHeight;
     }
+
+    function startCall() { document.getElementById('video-screen').style.display = 'flex'; document.getElementById('v-player').play(); }
+    function endCall() { document.getElementById('video-screen').style.display = 'none'; document.getElementById('v-player').pause(); }
+
+    document.getElementById('userInput').addEventListener("keypress", (e) => { if (e.key === "Enter") chatWithPriya(); });
 </script>
+
 </body>
 </html>
