--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
     <div id="video-screen">
         <video id="v-player" loop muted playsinline>
-            <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
+            <source src="https://www.istockphoto.com/en/video/webcam-view-of-eastern-business-woman-having-virtual-meeting-video-conference-call-gm2166378329-586484923" type="video/mp4">
         </video>
         <div class="call-btn-container">
             <button class="hangup" onclick="endCall()">End Call</button>
@@ -124,3 +124,4 @@
 
 </body>
 </html>
+
