--- a/index.html
+++ b/index.html
@@ -22,12 +22,7 @@
 
         #input-area { background: #f0f0f0; padding: 12px; display: flex; gap: 10px; align-items: center; }
         input { flex: 1; border: none; padding: 12px 18px; border-radius: 25px; outline: none; font-size: 16px; box-shadow: inset 0 1px 3px rgba(0,0,0,0.1); }
-        button#sendBtn { background: #075e54; color: white; border: none; width: 48px; height: 48px; border-radius: 50%; cursor: pointer; font-size: 20px; transition: 0.2s; }
-
-        #video-screen { position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: #000; display: none; z-index: 100; flex-direction: column; }
-        video { width: 100%; height: 100%; object-fit: cover; }
-        .call-btn-container { position: absolute; bottom: 50px; width: 100%; display: flex; justify-content: center; }
-        .hangup { background: #ff3b30; color: white; border: none; padding: 15px 40px; border-radius: 35px; font-weight: bold; font-size: 18px; cursor: pointer; }
+        button { background: #075e54; color: white; border: none; width: 48px; height: 48px; border-radius: 50%; cursor: pointer; font-size: 20px; transition: 0.2s; }
 
         @keyframes fadeIn { from { opacity: 0; transform: translateY(10px); } to { opacity: 1; transform: translateY(0); } }
     </style>
@@ -43,25 +38,15 @@
                 <span id="status">online</span>
             </div>
         </div>
-        <button onclick="startCall()" style="background:none; border:none; font-size:24px; cursor:pointer;">📞</button>
     </div>
 
-    <div id="chat-box">
+    <div id="chat-box" id="chat">
         <div class="bubble a">Hii babu! Itna wait karwaya tumne.. Ab jaldi se kuch pyari si baat karo. 😊</div>
     </div>
 
     <div id="input-area">
         <input type="text" id="userInput" placeholder="Type a message..." autocomplete="off">
-        <button id="sendBtn" onclick="chatWithPriya()">➤</button>
-    </div>
-
-    <div id="video-screen">
-        <video id="v-player" loop muted playsinline>
-            <source src="https://media.istockphoto.com/id/2166378329/video/webcam-view-of-eastern-business-woman-having-virtual-meeting-video-conference-call-videocall.mp4?s=mp4-640x640-is&k=20&c=cIHlFOMPVKXQGNA-MnSSyzoiyv2_GAIddyc3Y2VxvbU=" type="video/mp4">
-        </video>
-        <div class="call-btn-container">
-            <button class="hangup" onclick="endCall()">End Call</button>
-        </div>
+        <button onclick="chatWithPriya()">➤</button>
     </div>
 </div>
 
@@ -76,7 +61,7 @@
         document.getElementById('status').innerText = "typing...";
 
         try {
-            // Humne yahan URL ko sahi karke '/.netlify/functions/gemini' kar diya hai
+            // Hum Netlify function 'gemini' ko call kar rahe hain
             const response = await fetch('/.netlify/functions/gemini', {
                 method: "POST",
                 headers: { "Content-Type": "application/json" },
@@ -85,16 +70,16 @@
 
             const data = await response.json();
             
-            // Gemini API response structure ke hisaab se data nikalna
+            // Response check karna
             if (data.candidates && data.candidates[0].content.parts[0].text) {
                 const reply = data.candidates[0].content.parts[0].text;
                 addMsg(reply, 'a');
             } else {
-                addMsg("Arey babu, kuch network issue lag raha hai. Netlify ki settings check karo!", 'a');
+                addMsg("Babu, kuch galti ho rahi hai settings mein!", 'a');
             }
         } catch (e) {
             console.error(e);
-            addMsg("Babu, mera internet atak raha hai. Thoda wait karo na!", 'a');
+            addMsg("Babu, mera internet atak raha hai. Thoda wait karo!", 'a');
         } finally {
             document.getElementById('status').innerText = "online";
         }
@@ -107,15 +92,6 @@
         d.innerText = t;
         b.appendChild(d);
         b.scrollTop = b.scrollHeight;
-    }
-
-    function startCall() {
-        document.getElementById('video-screen').style.display = 'flex';
-        document.getElementById('v-player').play();
-    }
-    function endCall() {
-        document.getElementById('video-screen').style.display = 'none';
-        document.getElementById('v-player').pause();
     }
 
     document.getElementById('userInput').addEventListener("keypress", function(e) {
